--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   "devDependencies": {
     "gulp": "~3.8.8",
     "gulp-download-atom-shell": "0.0.4",
-    "fs-extra": "~0.12.0"
+    "fs-extra": "~0.12.0",
+    "bower": "~1.3.12",
+    "main-bower-files": "~2.0.0",
+    "gulp-google-cdn": "~1.1.0"
   }
 }
