--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,7 @@
     "tests"
   ],
   "dependencies": {
-    "semantic-ui": "~0.19.3"
+    "semantic-ui": "~0.19.3",
+    "angular": "~1.2.26"
   }
 }
