--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "fs-extra": "~0.12.0",
     "bower": "~1.3.12",
     "main-bower-files": "~2.0.0",
-    "gulp-google-cdn": "~1.1.0"
+    "gulp-google-cdn": "~1.1.0",
+    "open": "0.0.5"
   }
 }
