--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "eyes": "~0.1.8"
   },
   "devDependencies": {
+    "bower": "~1.3.12",
+    "exec": "^0.1.2",
+    "fs-extra": "~0.12.0",
     "gulp": "~3.8.8",
     "gulp-download-atom-shell": "0.0.4",
-    "fs-extra": "~0.12.0",
-    "bower": "~1.3.12",
-    "main-bower-files": "~2.0.0",
     "gulp-google-cdn": "~1.1.0",
-    "open": "0.0.5"
+    "main-bower-files": "~2.0.0",
+    "open": "0.0.5",
+    "shelljs": "^0.3.0"
   }
 }
